# GraphPY

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: example_1d.ipynb  example_2d.ipynb
src/GraphPY/: types.py
src/GraphPY/clustering/: predict.py
src/GraphPY/posterior/: plotting.py  posterior.py
src/GraphPY/sampler/: engine.py  kernels.py  samplers.py
src/GraphPY/utils/: dag_constructors.py  synthetic_data.py
src/gpy/: types.py
src/gpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gpy/clustering/: predict.py  psm.py
src/gpy/posterior/: plotting.py  posterior.py
src/gpy/sampler/: engine.py  kernels.py  sampler1d.py  sampler2d.py  samplers.py
tests/: conftest.py  test_posterior.py  test_psm.py  test_sampler1d.py
