[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpy"
version = "0.1.0"
description = "Hierarchical (Pitman–Yor/DP) sampler with pluggable observation models (1D/2D)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "tqdm>=4.65",
  "pandas>=2.0",
  "plotly>=5.15",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  "black>=24.0",
  "mypy>=1.8",
  "types-setuptools; python_version<'3.12'",
]

[tool.setuptools.packages.find]
where = ["src"]  # <- tells setuptools to look under src/

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E","F","I","B","UP","SIM"]
lint.ignore = ["E203"]  # keep Black compatibility
fix = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
check_untyped_defs = true
show_error_codes = true
exclude = ["examples/"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]
